Add property to specify Docker Compose flags